@@ -1,5 +1,6 @@
 = Edge
 
+* Created alias RedCloth.rb so Rails 2.1 gem dependency works on case-sensitive operating systems	.
 * Fixed parsing sentences that had two em dashes surrounded by spaces from becoming del phrases. #19
 * Fixed links including prior quoted phrases. #17
 
